--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,15 @@ body {
   background: cornflowerblue;
 }
 /* ----------- For screens 768px and larger ----------- */
-@media () {
+@media (min-width: 768px) {
 	body {
-
+    background: #c08497;
   }
 }
 
 /* ----------- For screens 1200px wide and larger----------- */
-@media () {
-
+@media (min-width: 1200px) {
+  body {
+    background: #534b62;
+  }
 }
